src/objects/User_Feedback__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <label>Grade</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0.5</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>1.5</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>2.5</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>3.5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>4.5</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>User Feedbacks</relationshipLabel>
        <relationshipName>User_Feedbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProfCode__c</fullName>
        <label>ProfCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Section__c</fullName>
        <label>Program/Section</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <formula>IMAGE( 
IF(ISPICKVAL(Grade__c, &apos;0.5&apos;) , &quot;/resource/LnP_Icons/LnP_Icons/star-half.svg&quot;,
IF(ISPICKVAL(Grade__c, &apos;1&apos;) , &quot;/resource/LnP_Icons/LnP_Icons/star-full.svg&quot;, 
IF(ISPICKVAL(Grade__c,&apos;1.5&apos;), &quot;/resource/LnP_Icons/LnP_Icons/onehalfstar.svg&quot;, 
IF(ISPICKVAL(Grade__c, &apos;2&apos;), &quot;/resource/LnP_Icons/LnP_Icons/twostars.svg&quot;, 
IF(ISPICKVAL(Grade__c,&apos;2.5&apos;), &quot;/resource/LnP_Icons/LnP_Icons/twohalfstar.svg&quot;, 
IF(ISPICKVAL(Grade__c,&apos;3&apos;), &quot;/resource/LnP_Icons/LnP_Icons/threestars.svg&quot;, 
IF(ISPICKVAL(Grade__c, &apos;3.5&apos;), &quot;/resource/LnP_Icons/LnP_Icons/threehalfstar.svg&quot;, 
IF(ISPICKVAL(Grade__c,&apos;4&apos;), &quot;/resource/LnP_Icons/LnP_Icons/fourstar.svg&quot;, 
IF(ISPICKVAL(Grade__c,&apos;4.5&apos;), &quot;/resource/LnP_Icons/LnP_Icons/fourhalfstar.svg&quot;,
IF(ISPICKVAL(Grade__c,&apos;5&apos;), &quot;/resource/LnP_Icons/LnP_Icons/fivestars.svg&quot;,  &quot;&quot;)))))))))), 
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_On__c</fullName>
        <label>Submitted On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Add Licensee</fullName>
                </value>
                <value>
                    <fullName>Remove Assumed Names</fullName>
                </value>
                <value>
                    <fullName>Add Licensee Pending Requests</fullName>
                </value>
                <value>
                    <fullName>Renewal Licensee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>User Feedback</label>
    <listViews>
        <fullName>All_User_Feedback</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>ProfCode__c</columns>
        <columns>Name__c</columns>
        <columns>Submitted_On__c</columns>
        <columns>Rating__c</columns>
        <columns>Comments__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All User Feedback</label>
    </listViews>
    <nameField>
        <label>User Feedback Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Feedbacks</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>